Fix paragraph spacing

--- a/source/stylesheets/_40_intro_and_outro.scss
+++ b/source/stylesheets/_40_intro_and_outro.scss
@@ -37,6 +37,9 @@ article.intro section.intro-short {
 article.intro section.intro-complete {
   margin-bottom: 0;
   cursor: pointer;
+  p {
+    padding-top: 0;
+  }
   @media (max-width: 749px) {
     table tr td {
       &:nth-child(1) {
